_lib/applications/obsidian-livesync/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian-livesync
  labels:
    app: "obsidian-livesync"
    home-0ps.com/policy-target: "application"
