_lib/applications/obsidian-livesync/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: obsidian-livesync
  labels:
    app.kubernetes.io/name: obsidian-livesync
    app.kubernetes.io/instance: obsidian-livesync-${ENVIRONMENT}
    app.kubernetes.io/version: "${OBSIDIAN_LIVESYNC_VERSION}"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5984
      targetPort: http
      name: http
  selector:
    app: obsidian-livesync
    node: worker
