_lib/applications/obsidian-livesync/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obsidian-livesync-internal
  namespace: obsidian-livesync
  labels:
    app.kubernetes.io/name: obsidian-livesync
    app.kubernetes.io/instance: obsidian-livesync-${ENVIRONMENT}
    environment: "${ENVIRONMENT}"
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: networking
  hostnames:
    - "${OBSIDIAN_LIVESYNC_SUBDOMAIN}.home-0ps.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: couchdb
          port: 5984
